Began rework of pathfinding UI.